packages/payload/src/admin/components/views/Login/index.scss
@import '../../../scss/styles';

.login {
  &__brand {
    display: flex;
    justify-content: center;
    width: 100%;
    margin-bottom: base(2);
  }

  &__wrap {
    & > *:first-child {
      margin-top: 0;
    }

    & > *:last-child {
      margin-bottom: 0;
    }

    .btn {
      margin: 0;
    }
  }
}

