chore: fix login form clearing out and add spacing

--- a/packages/payload/src/admin/components/views/Login/index.scss
+++ b/packages/payload/src/admin/components/views/Login/index.scss
@@ -21,4 +21,11 @@
       margin: 0;
     }
   }
+
+  &__inputWrap {
+    margin-bottom: base(0.25);
+    & > *:first-child {
+      margin-bottom: base(1);
+    }
+  }
 }
